# ai-engineering-hub-mini

amazon-product-analysis-server/: .env.example  .gitignore  README.md  index.ts  package-lock.json  package.json  tsconfig.json
amazon-product-analysis-server/resources/: styles.css
amazon-product-analysis-server/resources/amazon-product-analysis/: brightdata-tools.ts  server.ts  types.ts  utils.ts  widget.tsx
amazon-product-analysis-server/resources/amazon-product-analysis/components/: CustomerReviews.tsx  DeliveryInfo.tsx  Features.tsx  ImageGallery.tsx  PricingDeal.tsx  ProductCard.tsx  ProductSpecs.tsx  SellerInfo.tsx  index.ts
amazon-product-analysis-server/resources/amazon-product-analysis/hooks/: index.ts  (+1 more)
hugging-face-skills/: .gitignore  README.md  prompt.txt
hugging-face-skills/.claude-plugin/: marketplace.json  plugin.json
hugging-face-skills/.github/workflows/: generate-agents.yml  push-evals-leaderboard.yml  push-hackers-leaderboard.yml  push-quests.yml
hugging-face-skills/agents/: AGENTS.md
hugging-face-skills/apps/evals-leaderboard/: app.py  collect_evals.py  requirements.txt
hugging-face-skills/apps/hackers-leaderboard/: README.md  app.py  collect_points.py  requirements.txt
hugging-face-skills/apps/quests/: 02_evaluate-hub-model.md  03_publish-hub-dataset.md  04_sft-finetune-hub.md  README.md
hugging-face-skills/scripts/: AGENTS_TEMPLATE.md  generate_agents.py  link-skills.sh
mcp-video-rag/: README.md
train-yolo26-object-detection/: .comet.config  .comet.config.example  .env.example  README.md  pyproject.toml
